--- a/Games.html
+++ b/Games.html
@@ -66,8 +66,7 @@
         /* Content Styling */
         .content {
             display: flex;
-            flex-direction: row; /* Align items horizontally */
-            align-items: flex-start; /* Align items to the top */
+            flex-wrap: wrap; /* Allow wrapping for more buttons */
             justify-content: center; /* Center content horizontally */
             padding: 20px; /* Add some padding */
             gap: 30px; /* Space between game buttons */
@@ -141,7 +140,7 @@
             <a href="./About.html" class="nav-button">About</a>
         </div>
     </div>
-    <div class="content">
+       <div class="content">
         <a href="/Iframe/BurritoBision.html" class="game-button">
             <div class="image-container">
                 <img src="./img/burrito-bison-image.png" alt="Burrito Bison">
@@ -156,8 +155,188 @@
         </a>
         <a href="/Games/basketball-stars/" class="game-button">
             <div class="image-container">
-                <img src="/img/BAS.webp" alt="Subway Surfers">
+                <img src="/img/BAS.webp" alt="Basketball Stars">
                 <div class="tooltip">Basketball Stars</div>
+            </div>
+        </a>
+        <a href="/Iframe/dune" class="game-button">
+            <div class="image-container">
+                <img src="./img/dune.webp" alt="Dune">
+                <div class="tooltip">Dune</div>
+            </div>
+        </a>
+        <a href="/Iframe/fnaf" class="game-button">
+            <div class="image-container">
+                <img src="./img/fnaf.webp" alt="FNaF">
+                <div class="tooltip">FNaF</div>
+            </div>
+        </a>
+        <a href="/Iframe/funnyshooter2" class="game-button">
+            <div class="image-container">
+                <img src="./img/funnyshooter2.webp" alt="Funny Shooter 2">
+                <div class="tooltip">Funny Shooter 2</div>
+            </div>
+        </a>
+        <a href="/Iframe/impossiblequiz" class="game-button">
+            <div class="image-container">
+                <img src="./img/impossiblequiz.webp" alt="Impossible Quiz">
+                <div class="tooltip">Impossible Quiz</div>
+            </div>
+        </a>
+        <a href="/Iframe/jetpack-joyride" class="game-button">
+            <div class="image-container">
+                <img src="./img/jetpack-joyride.webp" alt="Jetpack Joyride">
+                <div class="tooltip">Jetpack Joyride</div>
+            </div>
+        </a>
+        <a href="/Iframe/learntofly" class="game-button">
+            <div class="image-container">
+                <img src="./img/learntofly.webp" alt="Learn to Fly">
+                <div class="tooltip">Learn to Fly</div>
+            </div>
+        </a>
+        <a href="/Iframe/learntofly2" class="game-button">
+            <div class="image-container">
+                <img src="./img/learntofly2.webp" alt="Learn to Fly 2">
+                <div class="tooltip">Learn to Fly 2</div>
+            </div>
+        </a>
+        <a href="/Iframe/motox3m" class="game-button">
+            <div class="image-container">
+                <img src="./img/motox3m.webp" alt="Moto X3M">
+                <div class="tooltip">Moto X3M</div>
+            </div>
+        </a>
+        <a href="/Iframe/motox3m-pool" class="game-button">
+            <div class="image-container">
+                <img src="./img/motox3m-pool.webp" alt="Moto X3M Pool">
+                <div class="tooltip">Moto X3M Pool</div>
+            </div>
+        </a>
+        <a href="/Iframe/motox3m-spooky" class="game-button">
+            <div class="image-container">
+                <img src="./img/motox3m-spooky.webp" alt="Moto X3M Spooky">
+                <div class="tooltip">Moto X3M Spooky</div>
+            </div>
+        </a>
+        <a href="/Iframe/motox3m-winter" class="game-button">
+            <div class="image-container">
+                <img src="./img/motox3m-winter.webp" alt="Moto X3M Winter">
+                <div class="tooltip">Moto X3M Winter</div>
+            </div>
+        </a>
+        <a href="/Iframe/riddleschool" class="game-button">
+            <div class="image-container">
+                <img src="./img/riddleschool.webp" alt="Riddle School">
+                <div class="tooltip">Riddle School</div>
+            </div>
+        </a>
+        <a href="/Iframe/riddleschool2" class="game-button">
+            <div class="image-container">
+                <img src="./img/riddleschool2.webp" alt="Riddle School 2">
+                <div class="tooltip">Riddle School 2</div>
+            </div>
+        </a>
+        <a href="/Iframe/riddleschool3" class="game-button">
+            <div class="image-container">
+                <img src="./img/riddleschool3.webp" alt="Riddle School 3">
+                <div class="tooltip">Riddle School 3</div>
+            </div>
+        </a>
+        <a href="/Iframe/riddleschool4" class="game-button">
+            <div class="image-container">
+                <img src="./img/riddleschool4.webp" alt="Riddle School 4">
+                <div class="tooltip">Riddle School 4</div>
+            </div>
+        </a>
+        <a href="/Iframe/riddleschool5" class="game-button">
+            <div class="image-container">
+                <img src="./img/riddleschool5.webp" alt="Riddle School 5">
+                <div class="tooltip">Riddle School 5</div>
+            </div>
+        </a>
+        <a href="/Iframe/slope" class="game-button">
+            <div class="image-container">
+                <img src="./img/slope.webp" alt="Slope">
+                <div class="tooltip">Slope</div>
+            </div>
+        </a>
+        <a href="/Iframe/snowrider3D" class="game-button">
+            <div class="image-container">
+                <img src="./img/snowrider3D.webp" alt="Snowrider 3D">
+                <div class="tooltip">Snowrider 3D</div>
+            </div>
+        </a>
+        <a href="/Iframe/stack-ball" class="game-button">
+            <div class="image-container">
+                <img src="./img/stack-ball.webp" alt="Stack Ball">
+                <div class="tooltip">Stack Ball</div>
+            </div>
+        </a>
+        <a href="/Iframe/stickslasher" class="game-button">
+            <div class="image-container">
+                <img src="./img/stickslasher.webp" alt="Stick Slasher">
+                <div class="tooltip">Stick Slasher</div>
+            </div>
+        </a>
+        <a href="/Iframe/temple-run-2" class="game-button">
+            <div class="image-container">
+                <img src="./img/temple-run-2.webp" alt="Temple Run 2">
+                <div class="tooltip">Temple Run 2</div>
+            </div>
+        </a>
+        <a href="/Iframe/tiny-fishing" class="game-button">
+            <div class="image-container">
+                <img src="./img/tiny-fishing.webp" alt="Tiny Fishing">
+                <div class="tooltip">Tiny Fishing</div>
+            </div>
+        </a>
+        <a href="/Iframe/tosstheturtle" class="game-button">
+            <div class="image-container">
+                <img src="./img/tosstheturtle.webp" alt="Toss the Turtle">
+                <div class="tooltip">Toss the Turtle</div>
+            </div>
+        </a>
+        <a href="/Iframe/vex3" class="game-button">
+            <div class="image-container">
+                <img src="./img/vex3.webp" alt="Vex 3">
+                <div class="tooltip">Vex 3</div>
+            </div>
+        </a>
+        <a href="/Iframe/vex4" class="game-button">
+            <div class="image-container">
+                <img src="./img/vex4.webp" alt="Vex 4">
+                <div class="tooltip">Vex 4</div>
+            </div>
+        </a>
+        <a href="/Iframe/vex5" class="game-button">
+            <div class="image-container">
+                <img src="./img/vex5.webp" alt="Vex 5">
+                <div class="tooltip">Vex 5</div>
+            </div>
+        </a>
+        <a href="/Iframe/vex6" class="game-button">
+            <div class="image-container">
+                <img src="./img/vex6.webp" alt="Vex 6">
+                <div class="tooltip">Vex 6</div>
+            </div>
+        </a>
+        <a href="/Iframe/vex7" class="game-button">
+            <div class="image-container">
+                <img src="./img/vex7.webp" alt="Vex 7">
+                <div class="tooltip">Vex 7</div>
+            </div>
+        </a>
+        <a href="/Iframe/worlds-hardest-game" class="game-button">
+            <div class="image-container">
+                <img src="./img/worlds-hardest-game.webp" alt="World's Hardest Game">
+                <div class="tooltip">World's Hardest Game</div>
+            </div>
+        </a>
+        <a href="/Iframe/worlds-hardest-game-2" class="game-button">
+            <div class="image-container">
+                <img src="./img/worlds-hardest-game-2.webp" alt="World's Hardest Game 2">
+                <div class="tooltip">World's Hardest Game 2</div>
             </div>
         </a>
     </div>
