--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,20 +6,18 @@
     <title>About Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Global Styles */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #1a1a1a;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            height: 100vh; /* Set body height to 100% of viewport */
-            overflow: hidden; /* Prevent scrolling */
+            height: 100vh;
+            overflow: hidden;
             display: flex;
             flex-direction: column;
         }
 
-        /* Top Bar Styling */
         .topbar {
             background-color: #222;
             padding: 20px;
@@ -36,7 +34,6 @@
             color: #f5f5f5;
         }
 
-        /* Navigation Buttons */
         .nav-buttons {
             margin-top: 10px;
         }
@@ -63,7 +60,6 @@
             background-color: #666;
         }
 
-        /* Content Styling */
         .content {
             flex-grow: 1;
             display: flex;
