--- a/Iframe/subsurfers.html
+++ b/Iframe/subsurfers.html
@@ -6,15 +6,14 @@
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Global Styles */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #1a1a1a;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            height: 100vh; /* Full height of viewport */
-            overflow: hidden; /* Prevent scrolling */
+            height: 100vh; 
+            overflow: hidden; 
             display: flex;
             flex-direction: column;
         }
@@ -22,7 +21,6 @@
             height: 10px;
             height: 10px;
         }
-        /* Top Bar Styling */
         .topbar {
             background-color: #222;
             padding: 20px;
@@ -39,7 +37,6 @@
             color: #f5f5f5;
         }
 
-        /* Navigation Buttons */
         .nav-buttons {
             margin-top: 10px;
         }
@@ -66,7 +63,6 @@
             background-color: #666;
         }
 
-        /* Content Styling */
         .content {
             flex-grow: 1;
             display: flex;
@@ -77,7 +73,6 @@
             padding: 20px;
         }
 
-        /* Iframe Container Styling */
         .iframe-container {
             width: 80%;
             height: 60vh;
@@ -92,14 +87,13 @@
             border-radius: 10px;
         }
 
-        /* Fullscreen Button as Image */
         .fullscreen-button {
             position: absolute;
             bottom: 10px;
             right: 10px;
-            width: 40px; /* Adjust size as needed */
+            width: 40px; 
             height: 40px;
-            background-image: url('fullscreen-icon.png'); /* Replace with the path to your fullscreen icon image */
+            background-image: url('fullscreen-icon.png'); 
             background-size: cover;
             border: none;
             cursor: pointer;
