--- a/Iframe/vex4.html
+++ b/Iframe/vex4.html
@@ -116,7 +116,7 @@
     </div>
     <div class="content">
         <div class="iframe-container">
-            <iframe id="gameIframe" src="/Games/BurritoBison/" frameborder="0"></iframe>
+            <iframe id="gameIframe" src="/Games/vex4/" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"><img src="/img/fullscreen.png" id="full"></button>
         </div>
     </div>
