--- a/Iframe/riddleschool4.html
+++ b/Iframe/riddleschool4.html
@@ -112,6 +112,7 @@
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
             <a href="/About.html" class="nav-button">About</a>
+            <a href="./chatroom.html" class="nav-button2">Chat room</a>
         </div>
     </div>
     <div class="content">
