--- a/Iframe/vex4.html
+++ b/Iframe/vex4.html
@@ -111,6 +111,7 @@
         <div class="nav-buttons">
             <a href="/index.html" class="nav-button">Home</a>
             <a href="/games.html" class="nav-button">Games</a>
+            <a href="./chatroom.html" class="nav-button">Chat room</a>
             <a href="/About.html" class="nav-button">About</a>
         </div>
     </div>
