--- a/Games/snowride/index.html
+++ b/Games/snowride/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Snow Rider 3D</title>
+    <meta name="robots" content="noindex, nofollow">
+    <title>Snow Rider 3D Unblocked - ubg235 GameDistribution</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/SnowRider3D_2024_reward_2_8.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/SnowRider3D-gd-1.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
     </script>
 </head>
-<body>
+<body style="overflow:hidden;">
     <div class="webgl-content">
         <div id="gameContainer" style="width: 960px; height: 600px; margin: auto"></div>
-<!--         <div class="footer">
+  <!--       <div class="footer">
             <div class="webgl-logo"></div>
             <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
             <div class="title">Snow Rider 3D</div>
         </div> -->
     </div>
+    <script src="js/analytics_ubg_v1_4.js"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"8c1bb83c1ab4c9b5","serverTiming":{"name":{"cfExtPri":true,"cfL4":true}},"version":"2024.8.0","token":"c843b8c381814d58b40d4597a1bf7962"}' crossorigin="anonymous"></script>
 </body>
 </html>
